# load-balancer

./: .gitignore  CMakeLists.txt  README.md  temp_valid_config.json
config/: config.json
doc/: HLD_Phase1_LoadBalancer.md  HLD_Phase2_LoadBalancer.md
include/: IConnection.h  acceptor.h  backend_pool.h  config_manager.h  config_types.h  connection.h  connection_pool.h  event_loop.h  event_loop_factory.h  logger.h  network_utils.h  reactor.h  router.h
include/interfaces/: ILogger.h
src/: acceptor.cpp  backend_pool.cpp  config_manager.cpp  connection.cpp  connection_pool.cpp  epoll_event_loop.cpp  event_loop_factory.cpp  kqueue_event_loop.cpp  logger.cpp  main.cpp  network_utils.cpp  reactor.cpp  router.cpp
tests/: e2e_test.sh
tests/mocks/: mock_dependencies.h
tests/unit/: acceptor_test.cpp  backend_pool_test.cpp  config_manager_test.cpp  connection_pool_test.cpp  connection_test.cpp  reactor_test.cpp  router_test.cpp
